<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    cardview:cardCornerRadius="4dp"
    android:layout_marginBottom="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/individualPictureCard"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/sample1"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_name_picture"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="16dp"
            android:paddingBottom="16dp"
            android:background="#53292929">

            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_card"
                android:textColor="@color/editTextColorWhite"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                
                <TextView
                    android:id="@+id/firstWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_word_card"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/timeCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_card_card"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="15sp"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/likeCheckboxCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"/>

                <TextView
                    android:id="@+id/likeNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like_number_card"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="15sp"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>